# FarmWasteSolidAndLiquidSeparatorMachine

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  app_machine.c  app_process.c  app_settings.c  main.c
main/include/: app_machine.h  app_process.h  app_settings.h  main.h
main/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/images/: ui_img_1396634952.c
main/ui/screens/: ui_scrMainMenu.c  ui_scrMainMenu.h  ui_scrRunAuto.c  ui_scrRunAuto.h  ui_scrSettings.c  ui_scrSettings.h  ui_scrSplashScreen.c  ui_scrSplashScreen.h  ui_scrTestMachine.c  ui_scrTestMachine.h
peripheral/bsp_pcf8575/: bsp_pcf8575.c
peripheral/bsp_pcf8575/include/: bsp_pcf8575.h
tools/: convert_image.py  convert_process_flow.py
